# emscripten_project_template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  emscripten.cmake
src/: main.cpp
src/js/: environment_variables.js  export_fs.js
